course1/practice/1.kube-basics-lecture/1.9.ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    # Добавьте необходимые аннотации
spec:
  rules:
    - host: k3s-server-1.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
